# crazyflie-lib-python-code

./: .gitignore  README.md
examples/autonomy/: corrected_flight.py  drift_flight_tests.py  logger.py  logging_without_threading.py  new_demo.py  rtlola_realtime_monitoring.py  square_demos.py  traverse.py
examples/log_data/: csv_create.py  csv_edit.py  grapher.py  mean_plot.py  net_drift.csv  net_drift_logger.csv  (+2 more)
rtlola/: Cargo.toml  README.md  in_place_drift.lola  trace_optimized_waypoint_spec.lola  waypoint_spec_v1.lola  waypoint_spec_v1_simplified.lola  waypoint_spec_v2.lola  waypoint_spec_v3.lola  waypoint_spec_v5_temporal_logic.lola  waypoint_spec_v6_drift_calc_temporal.lola
rtlola-streamir/: Cargo.toml  main.rs
rtlola-streamir/backend-comparer/: Cargo.toml  README.md  main.rs  run.sh  run_single.sh  tests.json
rtlola-streamir/backend-comparer/specs/: 2frequencies.lola  different_window_frequencies.lola  different_window_operations.lola  discrete_windows.lola  dynamic_periodic.lola  evaluation_order.lola  fairness.lola  filter_condition.lola  functions.lola  geofence.lola  get_access.lola  gps.lola  instance_aggregation.lola  intruder.lola  is_fresh.lola  multiple_evals.lola  parameterized_periodic.lola  simple_ac.lola  simple_hold.lola  simple_offset.lola  simple_sync.lola  simple_timed.lola  single_spawn.lola  spawn_and_close.lola  spawned_unparameterized_window.lola  trigger.lola  types.lola  window_bools.lola  window_integral.lola  window_over_exact.lola  window_variance.lola
rtlola-streamir/backend-comparer/src/: error.rs  main.rs  test_case.rs  test_runner.rs
rtlola-streamir/backend-comparer/src/runner/: compiler_runner.rs  interpreter.rs  mod.rs  new_interpreter.rs  rust_compiler.rs
rtlola-streamir/backend-comparer/traces/: fairness.csv  geofence.csv  gps.csv  intruder.csv  simple.csv  small_timed.csv  small_types.csv  two-bools.csv  two-floats.csv  two-ints-floattime.csv  two-ints.csv  two-uints.csv  types.csv
rtlola-streamir/rtlola-streamir/: Cargo.toml
rtlola-streamir/rtlola-streamir-interpreter/: Cargo.toml  README.md
rtlola-streamir/rtlola-streamir-interpreter/src/: closuregen.rs  csv.rs  lib.rs  memory.rs  schedule.rs  tests.rs  value.rs  verdict.rs
rtlola-streamir/rtlola-streamir-interpreter/src/closuregen/: expressions.rs  guards.rs  statements.rs  windows.rs
rtlola-streamir/rtlola-streamir-interpreter/src/closuregen/windows/: aggregations.rs  instances.rs  sliding.rs
rtlola-streamir/rtlola-streamir/src/: lib.rs
rtlola-streamir/rtlola-streamir/src/formatter/: expressions.rs
rtlola-streamir/rtlola-streamir/src/ir/lowering/: livetime_equivalences.rs
rtlola-streamir/rtlola-streamir/src/rewrite_rules/: implied_guards.rs  nested_ifs.rs  remove_ifs.rs
rtlola-streamir/rtlola2rust/: Cargo.toml  README.md
rtlola-streamir/rtlola2rust/src/: api.rs  constructs.rs  error.rs  expressions.rs  guards.rs  io.rs  lib.rs  main_function.rs  memory.rs  names.rs  schedule.rs  statements.rs  types.rs  windows.rs
rtlola-streamir/rtlola2rust/src/expressions/: get.rs  hold.rs  is_fresh.rs  offset.rs  sync.rs
rtlola-streamir/rtlola2rust/src/statements/: eval.rs  input.rs
rtlola-streamir/rtlola2rust/src/windows/: aggregations.rs  instance.rs  sliding.rs
rtlola-streamir/rtlola2rust/templates/main_function/: csv_offline.rs
rtlola-streamir/rtlola2rust/templates/stream_buffer/: dynamic.rs  instance.rs  static.rs  trait.rs
rtlola-streamir/rtlola2rust/templates/windows/: aggregation_trait.rs  average.rs  conjunction.rs  count.rs  discrete_buffer.rs  disjunction.rs  integral.rs  max.rs  min.rs  parameterized_sliding_buffer.rs  product.rs  sliding_buffer.rs  sum.rs  variance.rs
rtlola-streamir/rtlola2solidity/: Cargo.toml  README.md
rtlola-streamir/rtlola2solidity/compiled_contracts/: simple.sol  simple_paramertization.sol
rtlola-streamir/rtlola2solidity/configurations/: simple.toml
rtlola-streamir/rtlola2solidity/specifications/: simple.lola  simple_parametrization.lola
rtlola-streamir/rtlola2solidity/src/: expressions.rs  functions.rs  guards.rs  interface.rs  lib.rs  memory.rs  statements.rs  types.rs
rtlola-streamir/rtlola2solidity/src/expressions/: get_access.rs
rtlola-streamir/rtlola2solidity/src/statements/: close.rs  eval.rs  input.rs  shift.rs  spawn.rs
rtlola/rtlola2c/: Cargo.toml
rtlola/rtlola2c/src/: guards.rs  io.rs  main_function.rs  memory.rs  statements.rs
rtlola/rtlola2c/src/expressions/: offset.rs  sync.rs
rtlola/rtlola2c/src/statements/: close.rs
rtlola_spec/: trace_optimized_waypoint_spec.lola  waypoint_spec.lola
(+426 files in other folders)
