[package]
name = "backend-comparer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempdir = "0.3.7"
console = "0.15.5"
itertools = "0.10.5"
nom = "7.1.3"
clap = { version = "4.1.6", features = ["derive"] }
lazy_static = "1.4.0"
terminal_size = "0.2.5"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.120"
csv = "1.3.0"
rtlola-io-plugins = { version = "0.3.0", features = ["json_plugin"] }
jsonl = "4.0.1"
