[package]
name = "rtlola-streamir-interpreter"
version = "0.1.0"
edition = "2021"
authors = [
  "Jan Baumeister <jan.baumeister@cispa.de>",
  "Frederik Scheerer <frederik.scheerer@cispa.de>",

]
description = "An interpreter for RTLola through StreamIR"
readme = "README.md"
homepage = "https://rtlola.org"
repository = "https://github.com/reactive-systems/rtlola-streamir"
license = "Apache-2.0"
keywords = ["verification", "compiler", "monitoring", "interpreter"]

[[bin]]
name = "rtlola-streamir-interpreter"
path = "src/bin/main.rs"

[dependencies]
rtlola-streamir = "0.1.0"
ordered-float = "5.0.0"
thiserror = "2.0.12"
bit-set = "0.8.0"
dyn-clone = "1.0.19"
itertools = "0.14.0"
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive"] }
csv = "1.3.1"
rust_decimal = { version = "1.37.1", features = ["maths"] }
