[package]
name = "rtlola2c"
version = "0.1.0"
edition = "2021"
authors = [
    "Jan Baumeister <jan.baumeister@cispa.de>",
    "Frederik Scheerer <frederik.scheerer@cispa.de>",
]

[[bin]]
name = "rtlola2c"
path = "src/bin/main.rs"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
itertools = "0.14.0"
rtlola-streamir = { path = "../rtlola-streamir" }
